fixed footer box gap

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -109,7 +109,6 @@
   .footerbox {
     background-color: $footer;
     color: white;
-    margin-top: 2em;
     padding-left: 2em;
     padding-right: 2em;
   }
